Added scrolling to the blackout details dialog layout and modified the conditions for the enforcer overlay to trigger.

--- a/squelch/Resources/layout/dialog_blackout_details.xml
+++ b/squelch/Resources/layout/dialog_blackout_details.xml
@@ -15,140 +15,145 @@
         android:textColor="@color/colorPrimaryForeground"
         android:padding="10dp"
         android:background="@color/colorPrimary"/>
-    <TableLayout
-        android:id="@+id/dialog_blackout_details_data_layout"
+    <ScrollView
+        android:layout_weight="1"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:stretchColumns="0,1"
-        android:padding="10dp">
-        <TableRow
+        android:layout_height="wrap_content">
+        <TableLayout
+            android:id="@+id/dialog_blackout_details_data_layout"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/text_blackout_start_date_col"
-                android:padding="10dp"
-                android:layout_gravity="center"/>
-            <TextView
-                android:id="@+id/dialog_blackout_details_data_layout_start_date_label"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="_start_date"
-                android:padding="10dp"
-                android:layout_gravity="center"/>
-        </TableRow>
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/text_blackout_end_date_col"
-                android:padding="10dp"
-                android:layout_gravity="center"/>
-            <TextView
-                android:id="@+id/dialog_blackout_details_data_layout_end_date_label"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="_end_date"
-                android:padding="10dp"
-                android:layout_gravity="center"/>
-        </TableRow>
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/text_blackout_bid_col"
-                android:padding="10dp"
-                android:layout_gravity="center"/>
-            <TextView
-                android:id="@+id/dialog_blackout_details_data_layout_bid_label"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="_bid"
-                android:padding="10dp"
-                android:layout_gravity="center"/>
-        </TableRow>
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/text_blackout_difficulty_col"
-                android:padding="10dp"
-                android:layout_gravity="center"/>
-            <TextView
-                android:id="@+id/dialog_blackout_details_data_layout_difficulty_label"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="_difficulty"
-                android:padding="10dp"
-                android:layout_gravity="center"/>
-        </TableRow>
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/text_blackout_status_col"
-                android:padding="10dp"
-                android:layout_gravity="center"/>
-            <TextView
-                android:id="@+id/dialog_blackout_details_data_layout_status_label"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="_status"
-                android:padding="10dp"
-                android:layout_gravity="center"/>
-        </TableRow>
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/text_blackout_result_col"
-                android:padding="10dp"
-                android:layout_gravity="center"/>
-            <TextView
-                android:id="@+id/dialog_blackout_details_data_layout_result_label"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="_result"
-                android:padding="10dp"
-                android:layout_gravity="center"/>
-        </TableRow>
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/text_blackout_blacklist_col"
-                android:padding="10dp"
-                android:layout_gravity="center"/>
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
-        </TableRow>
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-            <TextView
-                android:id="@+id/dialog_blackout_details_data_layout_blacklist_label"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="_blacklist"
-                android:padding="10dp"
-                android:layout_span="2"
-                android:layout_gravity="center"/>
-        </TableRow>
-    </TableLayout>
+            android:layout_height="wrap_content"
+            android:stretchColumns="0,1"
+            android:padding="10dp">
+            <TableRow
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/text_blackout_start_date_col"
+                    android:padding="10dp"
+                    android:layout_gravity="center"/>
+                <TextView
+                    android:id="@+id/dialog_blackout_details_data_layout_start_date_label"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="_start_date"
+                    android:padding="10dp"
+                    android:layout_gravity="center"/>
+            </TableRow>
+            <TableRow
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/text_blackout_end_date_col"
+                    android:padding="10dp"
+                    android:layout_gravity="center"/>
+                <TextView
+                    android:id="@+id/dialog_blackout_details_data_layout_end_date_label"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="_end_date"
+                    android:padding="10dp"
+                    android:layout_gravity="center"/>
+            </TableRow>
+            <TableRow
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/text_blackout_bid_col"
+                    android:padding="10dp"
+                    android:layout_gravity="center"/>
+                <TextView
+                    android:id="@+id/dialog_blackout_details_data_layout_bid_label"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="_bid"
+                    android:padding="10dp"
+                    android:layout_gravity="center"/>
+            </TableRow>
+            <TableRow
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/text_blackout_difficulty_col"
+                    android:padding="10dp"
+                    android:layout_gravity="center"/>
+                <TextView
+                    android:id="@+id/dialog_blackout_details_data_layout_difficulty_label"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="_difficulty"
+                    android:padding="10dp"
+                    android:layout_gravity="center"/>
+            </TableRow>
+            <TableRow
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/text_blackout_status_col"
+                    android:padding="10dp"
+                    android:layout_gravity="center"/>
+                <TextView
+                    android:id="@+id/dialog_blackout_details_data_layout_status_label"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="_status"
+                    android:padding="10dp"
+                    android:layout_gravity="center"/>
+            </TableRow>
+            <TableRow
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/text_blackout_result_col"
+                    android:padding="10dp"
+                    android:layout_gravity="center"/>
+                <TextView
+                    android:id="@+id/dialog_blackout_details_data_layout_result_label"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="_result"
+                    android:padding="10dp"
+                    android:layout_gravity="center"/>
+            </TableRow>
+            <TableRow
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/text_blackout_blacklist_col"
+                    android:padding="10dp"
+                    android:layout_gravity="center"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
+            </TableRow>
+            <TableRow
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+                <TextView
+                    android:id="@+id/dialog_blackout_details_data_layout_blacklist_label"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="_blacklist"
+                    android:padding="10dp"
+                    android:layout_span="2"
+                    android:layout_gravity="center"/>
+            </TableRow>
+        </TableLayout>
+    </ScrollView>
     <LinearLayout
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
